--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,28 @@
 jobs:
-  tflint:
+  build:
     machine: true
     steps:
       - checkout
-
-      - run: 
-          command: docker run --rm -v $(pwd):/data -t ghcr.io/terraform-linters/tflint --chdir=aws -f json | tee tflint-output.json || true
-
-      - store_artifacts:
-          path: tflint-output.json
-          destination: tflint-artifact
-          when: always
+      - run: echo "This is a build step"
 
   test:
     machine: true
     steps:
       - checkout
       - run: echo "This is a test step"
+
+  checkov:
+    machine: true
+    steps:
+      - checkout
+
+      - run: 
+          command: docker run --rm -w /src -v $(pwd):/src bridgecrew/checkov -d aws -o json | tee checkov-output.json || true
+
+      - store_artifacts:
+          path: checkov-output.json
+          destination: checkov-artifact
+          when: always
 
   integration:
     machine: true
@@ -26,6 +32,7 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
+          when: on_fail         # Even if the job fails, continue to the next stages
 
   prod:
     machine: true
@@ -37,10 +44,10 @@ workflows:
   version: 2
   terraform:
     jobs:
-      - tflint
+      - checkov
       - test:
           requires:
-            - tflint
+            - checkov
       - integration:
           requires:
             - test
