--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,25 +6,20 @@ on:
       - main
 
 jobs:
-  terrascan:
+  tfsec:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Run Terrascan
-        id: terrascan
-        uses: accurics/terrascan-action@v1
+      - name: Terraform security scan
+        uses: aquasecurity/tfsec-action@v1.0.0
         with:
-          iac_type: 'terraform'
-          iac_version: 'v14'
-          policy_type: 'aws'
-          only_warn: true
-          iac_dir: 'aws'
+          soft_fail: true
 
   test:
     runs-on: ubuntu-20.04
-    needs: terrascan
+    needs: tfsec
     steps:
       - run: echo "This is a test step"
 
